--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="xylophone"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+            android:name="flutterEmbedding"
+            android:value="2" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -36,4 +39,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
